# animenepal-stream-proxy

./: package-lock.json  package.json  wrangler.toml
.github/workflows/: release.yml
src/: app.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
