[package]
name = "animenepal-proxy"
version = "0.1.0"
description = "AnimeNepalproxy App for scraping videos."
authors = ["subu19"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
axum = "0.8.4"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.2", features = ["rustls", "stream", "json"] }
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.8"
urlencoding = "2.1.3"
